fix dark mode field colors?

--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -9,7 +9,7 @@
 	--heading-color: #292922;
 }
 
-[data-theme='dark'] {
+body[data-theme='dark'] {
 	--primary-color: #9a97f3;
 	--secondary-color: #818cab;
 	--font-color: #e1e1ff;
